	PR c++/19208 	* pt.c (fold_decl_constant_value): Always call fold_non_dependent_expr 	at least once. 	(tsubst): Use fold_decl_constant_value in place of a bare call to 	integral_constant_value.

PR c++/19208
	* g++.dg/template/array11.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@94006 138bc75d-0d04-0410-961f-82ee72b054a4